egonlang-core/res/examples/invalid/block_returning_prefix_expr_negate_tuple.eg
-(true, "string",);

// out: TypeError: mismatched types: expected type `number` but received `tuple<bool, string>`
